--- a/debezium-core/pom.xml
+++ b/debezium-core/pom.xml
@@ -108,11 +108,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <dependency>
-            <groupId>io.confluent</groupId>
-            <artifactId>kafka-connect-avro-converter</artifactId>
-            <scope>test</scope>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>io.confluent</groupId>-->
+<!--            <artifactId>kafka-connect-avro-converter</artifactId>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
         <!-- open libraries -->
         <dependency>
             <groupId>com.google.guava</groupId>
